k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: studio
  labels:
    name: studio
    environment: production
